--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,37 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/foreverpresent.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#102a43" />
     <meta
       name="description"
-      content="ForeverPresent - Preserve memories and stay connected with loved ones through AI video calls"
+      content="ForeverPresent creates meaningful AI experiences that let you see, hear, and speak with your loved ones, preserving their essence for generations to come."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="keywords" content="AI memorial, digital legacy, grief support, memory preservation, AI video calls, deceased loved ones, family memories" />
+    <meta name="author" content="ForeverPresent" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://foreverpresent.ai/" />
+    <meta property="og:title" content="ForeverPresent - Keep Their Memory Alive, Forever" />
+    <meta property="og:description" content="We create meaningful AI experiences that let you see, hear, and speak with your loved ones, preserving their essence for generations to come." />
+    <meta property="og:image" content="https://foreverpresent.ai/foreverpresent_logo.png" />
+    <meta property="og:site_name" content="ForeverPresent" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://foreverpresent.ai/" />
+    <meta name="twitter:title" content="ForeverPresent - Keep Their Memory Alive, Forever" />
+    <meta name="twitter:description" content="We create meaningful AI experiences that let you see, hear, and speak with your loved ones, preserving their essence for generations to come." />
+    <meta name="twitter:image" content="https://foreverpresent.ai/foreverpresent_logo.png" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://foreverpresent.ai/" />
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/foreverpresent_logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>ForeverPresent - Keep Their Memory Alive</title>
+    <title>ForeverPresent - Keep Their Memory Alive, Forever</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
