--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,15 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/foreverpresent_logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>ForeverPresent - Keep Their Memory Alive, Forever</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9R7LT1SB3K"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-9R7LT1SB3K');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
