some changes adding an sms consent page

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,14 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://foreverpresent.ai/" />
 
+    <!-- Preconnect to Google Fonts for faster loading -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Preload fonts to prevent FOUT (Flash of Unstyled Text) -->
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/foreverpresent_logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>ForeverPresent - Keep Their Memory Alive, Forever</title>
