added some canonical fix bs

--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,7 @@
     <meta name="twitter:description" content="We create meaningful AI experiences that let you see, hear, and speak with your loved ones, preserving their essence for generations to come." />
     <meta name="twitter:image" content="https://foreverpresent.ai/foreverpresent_logo.png" />
 
-    <!-- Canonical URL -->
-    <link rel="canonical" href="https://foreverpresent.ai/" />
+    <!-- Canonical URL - Set dynamically per page via React -->
 
     <!-- Preconnect to Google Fonts for faster loading -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
